--- a/.config/hypr/modules/input.conf
+++ b/.config/hypr/modules/input.conf
@@ -10,7 +10,8 @@ input {
     mouse_refocus = false
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-    accel_profile = flat
+    accel_profile = custom 0.2144477505658554 0.000 0.205 0.410 0.718 1.026 1.334 1.670 2.138 2.607 3.075 3.543 4.012 4.480 4.948 5.417 5.885 6.353 6.822 7.290 8.258
+    scroll_points = 0.2144477505658554 0.000 0.307 0.615 1.077 1.539 2.002 2.505 3.208 3.910 4.613 5.315 6.018 6.720 7.423 8.125 8.828 9.530 10.233 10.935 12.387
     repeat_delay = 200
     repeat_rate = 50
 
