--- a/.config/hypr/modules/keybinds.conf
+++ b/.config/hypr/modules/keybinds.conf
@@ -1,16 +1,22 @@
-$mod = SUPER # Sets "Windows" key as main modifier
+# https://wiki.hypr.land/Configuring/Binds/
+$mod = SUPER
 
-# Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
+################
+### TERMINAL ###
+################
 bind = $mod, Return, exec, kitty
 bind = $mod, C, exec, [float on; size 800 600; center] kitty -e python -i -c 'import math' -q 2>/dev/null
 
+##############
+### LAYOUT ###
+##############
 bind = $mod SHIFT, Q, killactive,
 bind = $mod SHIFT, e, exit,
 bind = $mod SHIFT, period, exec, hyprlock
 bind = $mod SHIFT, Space, togglefloating,
 bind = $mod, D, exec, rofi -show drun
 #bind = $mod, D, exec, wofi --width=900 --height=500 --gtk-dark -a --allow-images --show drun --prompt "Search"
-bind = $mod, P, pseudo, # dwindle
+bind = $mod, P, pseudo, # dwindle (maintain window size when tiled)
 bind = $mod, G, togglesplit, # dwindle
 bind = $mod SHIFT, J, swapsplit, # dwindle
 bind = $mod SHIFT, K, swapsplit, # dwindle
@@ -19,7 +25,9 @@ bind = $mod SHIFT, L, swapsplit, # dwindle
 bind = $mod, S, layoutmsg, preselect d
 bind = $mod, F, fullscreen, 0
 
-# Move focus with mod + arrow keys
+#######################
+### WINDOW FOCUSING ###
+#######################
 bind = $mod, h, movefocus, l
 bind = $mod, l, movefocus, r
 bind = $mod, k, movefocus, u
@@ -30,7 +38,9 @@ bind = $mod, right, movefocus, r
 bind = $mod, up, movefocus, u
 bind = $mod, down, movefocus, d
 
-# Switch workspaces with mod + [0-9]
+###########################
+### WORKSPACE SWITCHING ###
+###########################
 bind = $mod, 1, workspace, 1
 bind = $mod, 2, workspace, 2
 bind = $mod, 3, workspace, 3
@@ -44,7 +54,9 @@ bind = $mod, 0, workspace, 10
 bind = $mod, T, workspace, name:
 bind = $mod, U, workspace, name:󱞼
 
-# Move active window to a workspace with mod + SHIFT + [0-9]
+#####################
+### WINDOW MOVING ###
+#####################
 bind = $mod SHIFT, 1, movetoworkspacesilent, 1
 bind = $mod SHIFT, 2, movetoworkspacesilent, 2
 bind = $mod SHIFT, 3, movetoworkspacesilent, 3
@@ -61,7 +73,6 @@ bind = $mod SHIFT, U, movetoworkspacesilent, name:󱞼
 #######################
 ### WINDOW RESIZING ###
 #######################
-
 bind = $mod, R, submap, resize
 submap=resize
 binde = ,l, resizeactive, 10 0
@@ -78,37 +89,53 @@ bind = ,Escape,submap,reset
 bind = ,Return,submap,reset
 submap=reset
 
-# Example special workspace (scratchpad)
-#bind = $mod, S, togglespecialworkspace, magic
-#bind = $mod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mod + scroll
-#bind = $mod, mouse_down, workspace, e+1
-#bind = $mod, mouse_up, workspace, e-1
-
-bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
-
 # Move/resize windows with mod + LMB/RMB and dragging
 bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
 
-# Laptop multimedia keys for volume and LCD brightness
+#########################
+### CLIPBOARD HISTORY ###
+#########################
+bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+
+############################################################
+### LAPTOP MULTIMEDIA KEYS FOR VOLUME AND LCD BRIGHTNESS ###
+############################################################
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindl = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindl = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n236 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n236 set 5%-
 
-bind = CONTROL, Space, exec, dunstctl close
-bind = CONTROL SHIFT, Space, exec, dunstctl close-all
+bindl = ,XF86AudioNext, exec, playerctl next
+bindl = ,XF86AudioPause, exec, playerctl play-pause
+bindl = ,XF86AudioPlay, exec, playerctl play-pause
+bindl = ,XF86AudioPrev, exec, playerctl previous
+
+#####################
+### NOTIFICATIONS ###
+#####################
+bindl = CONTROL, Space, exec, dunstctl close
+bindl = CONTROL SHIFT, Space, exec, dunstctl close-all
 bind = CONTROL, grave, exec, dunstctl history-pop
 bind = CONTROL SHIFT, period, exec, dunstctl context
 
+###################
+### SCREENSHOTS ###
+###################
+bind = ,Print, exec, hyprshot -m active -m output -o ~/screenshots/
+bind = SUPER, Print, exec, hyprshot -m region -o ~/screenshots/
+bind = SUPER SHIFT, Print, exec, hyprshot -m active -m window -o ~/screenshots/
+
+#######################################
+### PYTHON INTERPRETER (CALCULATOR) ###
+#######################################
+bind = $mod, C, exec, kitty --app-id 'python-floating-calc' -e python -i -c 'import math' -q 2>/dev/null
+
+#####################
+### RELOAD WAYBAR ###
+#####################
 bind = $mod SHIFT, R, exec, systemctl --user reload waybar.service || systemctl --user restart waybar.service
 
-# Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
+#bindl = , switch:off:Lid Switch, exec, hyprlock
