hypr: adapt config to new hypr* versions

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -52,7 +52,7 @@ cursor {
     no_warps = true
 }
 
-layerrule = blur,wofi 
+layerrule = blur on,match:namespace wofi
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
