--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,7 @@
-preload = ~/Pictures/wallpapers/nature/river-trees-forest-clouds-wallpaper.jpg
-wallpaper = ,~/Pictures/wallpapers/nature/river-trees-forest-clouds-wallpaper.jpg
+splash = false
+
+wallpaper {
+    monitor =
+    path = ~/Pictures/wallpapers/artsy/illustration-landscape-digital-art-mountains-wallpaper-50f055697ff63eb3883fc7f67ba6b4b8.jpg
+    fit_mode = cover
+}
