--- a/.config/hypr/modules/keybinds.conf
+++ b/.config/hypr/modules/keybinds.conf
@@ -2,7 +2,7 @@ $mod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mod, Return, exec, kitty
-bind = $mod, C, exec, kitty --app-id 'python-floating-calc' -e python -i -c 'import math' -q 2>/dev/null
+bind = $mod, C, exec, [float on; size 800 600; center] kitty -e python -i -c 'import math' -q 2>/dev/null
 
 bind = $mod SHIFT, Q, killactive,
 bind = $mod SHIFT, e, exit,
