--- a/.config/hypr/modules/rules.conf
+++ b/.config/hypr/modules/rules.conf
@@ -1,21 +1,36 @@
 # See https://wiki.hypr.land/Configuring/Window-Rules/ for more
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
 
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+windowrule {
+    name = suppress-maximize-events
+    match:class = .*
 
-# Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+    suppress_event = maximize
+}
+
+windowrule {
+    name = fix-xwayland-drags
+    match:class = ^$
+    match:title = ^$
+    match:xwayland = true
+    match:float = true
+    match:fullscreen = false
+    match:pin = false
+
+    no_focus = true
+}
 
 # Move Spotify to its own workspace
-windowrule = workspace name:,class:Spotify
+windowrule = workspace name:, match:class spotify
 
-# Make the python calculator a floating window
-windowrule = float,class:^(python-floating-calc)$
-windowrule = size 800 600,class:^(python-floating-calc)$
-windowrule = float,class:^(org.gnome.Calendar)$
-windowrule = size 1200 600,class:^(org.gnome.Calendar)$
-windowrule = move 200 25,class:^(org.gnome.Calendar)$
+# Move TeamSpeak to its own workspace
+windowrule = workspace name:, match:class TeamSpeak 3
+
+# Move Steam to its own workspace
+windowrule = workspace name:, match:class steam
+
+windowrule = float off, match:class iw3mp.exe
+windowrule = fullscreen on, match:class iw3mp.exe
 
 # Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
 # "Smart gaps" / "No gaps when only"
