--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -689,6 +689,7 @@ scrollback_lines 2000
 #: disable opening of URLs with a plain click::
 
 #:     mouse_map left click ungrabbed
+mouse_map left click ungrabbed
 
 #: See all the mappable actions including mouse actions here
 #: <https://sw.kovidgoyal.net/kitty/actions/>.
@@ -705,6 +706,7 @@ scrollback_lines 2000
 #: Click the link under the mouse or move the cursor
 
 # mouse_map left click ungrabbed mouse_handle_click selection link prompt
+mouse_map ctrl+left click ungrabbed mouse_handle_click selection link prompt
 
 #::  First check for a selection and if one exists do nothing. Then
 #::  check for a link under the mouse cursor and if one exists, click
@@ -1762,7 +1764,7 @@ color15 #D8DEE9
 #: remote machine to read/write to the local filesystem, without
 #: permission.
 
-# allow_hyperlinks yes
+allow_hyperlinks ask
 
 #: Process hyperlink escape sequences (OSC 8). If disabled OSC 8
 #: escape sequences are ignored. Otherwise they become clickable
@@ -2073,7 +2075,7 @@ shell_integration  no-cursor
 #: The full list of actions that can be mapped to key presses is
 #: available here <https://sw.kovidgoyal.net/kitty/actions/>.
 
-# kitty_mod ctrl+shift
+kitty_mod ctrl+shift
 
 #: Special modifier key alias for default shortcuts. You can change
 #: the value of this option to alter all default shortcuts that use
@@ -2174,11 +2176,13 @@ shell_integration  no-cursor
 
 # map kitty_mod+page_up scroll_page_up
 # map cmd+page_up       scroll_page_up
+map shift+page_up       scroll_page_up
 
 #: Scroll page down
 
 # map kitty_mod+page_down scroll_page_down
 # map cmd+page_down       scroll_page_down
+map shift+page_down       scroll_page_down
 
 #: Scroll to top
 
