hypr: abstract machine-specific settings to their own configs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -7,7 +7,7 @@ exec-once = systemctl --user start hyprland.target
 ################
 ### MONITORS ###
 ################
-monitor=,preferred,auto,1.6
+source = ~/.config/hypr/modules/monitors.conf
 
 #################
 ### AUTOSTART ###
@@ -19,6 +19,14 @@ source = ~/.config/hypr/modules/autostart.conf
 #############################
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+source = ~/.config/hypr/modules/env.conf
+
+################
+### XWAYLAND ###
+################
+xwayland {
+    force_zero_scaling = true
+}
 
 #####################
 ### LOOK AND FEEL ###
