--- a/.config/hypr/modules/input.conf
+++ b/.config/hypr/modules/input.conf
@@ -21,10 +21,4 @@ input {
     }
 }
 
-# Example per-device config
-# See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
-
+source = ~/.config/hypr/modules/devices.conf
