--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 !/.config/swayimg
 !/.config/waybar
 
+/.config/waybar/config.jsonc
+
 # qutebrowser
 !/.config/qutebrowser
 /.config/qutebrowser/*
