--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2294,8 +2294,8 @@ map shift+page_down       scroll_page_down
 
 #: Close window
 
-# map kitty_mod+w close_window
-# map shift+cmd+d close_window
+map kitty_mod+w
+map shift+cmd+d
 
 #: Next window
 
