kitty: improve keybindings

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2177,12 +2177,14 @@ kitty_mod ctrl+shift
 # map kitty_mod+page_up scroll_page_up
 # map cmd+page_up       scroll_page_up
 map shift+page_up       scroll_page_up
+map kitty_mod+u         scroll_page_up
 
 #: Scroll page down
 
 # map kitty_mod+page_down scroll_page_down
 # map cmd+page_down       scroll_page_down
 map shift+page_down       scroll_page_down
+map kitty_mod+d           scroll_page_down
 
 #: Scroll to top
 
@@ -2196,7 +2198,7 @@ map shift+page_down       scroll_page_down
 
 #: Scroll to previous shell prompt
 
-# map kitty_mod+z scroll_to_prompt -1
+map kitty_mod+z scroll_to_prompt -1
 
 #::  Use a parameter of 0 for scroll_to_prompt to scroll to the last
 #::  jumped to or the last clicked position. Requires shell
@@ -2205,11 +2207,13 @@ map shift+page_down       scroll_page_down
 
 #: Scroll to next shell prompt
 
-# map kitty_mod+x scroll_to_prompt 1
+map kitty_mod+x scroll_to_prompt 1
 
 #: Browse scrollback buffer in pager
 
 # map kitty_mod+h show_scrollback
+map alt+e pipe @last_cmd_output overlay nvim - -c 'set filetype=scrollback'
+map alt+shift+e pipe @screen_scrollback overlay nvim - -c 'set filetype=scrollback'
 
 #::  You can pipe the contents of the current screen and history
 #::  buffer as STDIN to an arbitrary program using launch --stdin-
@@ -2494,6 +2498,10 @@ map shift+cmd+d
 # map cmd+minus             change_font_size all -2.0
 # map shift+cmd+minus       change_font_size all -2.0
 
+map kitty_mod+l  change_font_size all +2.0
+map kitty_mod+h  change_font_size all -2.0
+map kitty_mod+r  change_font_size all 0
+
 #: Reset font size
 
 # map kitty_mod+backspace change_font_size all 0
@@ -2606,6 +2614,7 @@ map shift+cmd+d
 
 # map kitty_mod+u    kitten unicode_input
 # map ctrl+cmd+space kitten unicode_input
+map kitty_mod+e    kitten unicode_input
 
 #: Edit config file
 
