hyprland: add keybind for client-area fullscreen

--- a/.config/hypr/modules/keybinds.conf
+++ b/.config/hypr/modules/keybinds.conf
@@ -23,6 +23,7 @@ bind = $mod SHIFT, H, swapsplit, # dwindle
 bind = $mod SHIFT, L, swapsplit, # dwindle
 bind = $mod, S, layoutmsg, preselect d
 bind = $mod, F, fullscreen, 0
+bind = $mod SHIFT, F, fullscreen, 1
 
 #######################
 ### WINDOW FOCUSING ###
