hyprland: freeze screen while taking a region screenshot

--- a/.config/hypr/modules/keybinds.conf
+++ b/.config/hypr/modules/keybinds.conf
@@ -125,7 +125,7 @@ bind = CONTROL SHIFT, period, exec, dunstctl context
 ### SCREENSHOTS ###
 ###################
 bind = ,Print, exec, hyprshot -m active -m output -o ~/screenshots/
-bind = SUPER, Print, exec, hyprshot -m region -o ~/screenshots/
+bind = SUPER, Print, exec, hyprshot -z -m region -o ~/screenshots/
 bind = SUPER SHIFT, Print, exec, hyprshot -m active -m window -o ~/screenshots/
 
 #######################################
