hyprland: fix keyboard layout toggle (collision with togglefloating)

--- a/.config/hypr/modules/keybinds.conf
+++ b/.config/hypr/modules/keybinds.conf
@@ -12,6 +12,7 @@ bind = $mod, Return, exec, kitty
 bind = $mod SHIFT, Q, killactive,
 bind = $mod SHIFT, e, exit,
 bind = $mod SHIFT, period, exec, hyprlock
+bind = $mod, Space, exec, for device in $(hyprctl devices -j | jq -r '.keyboards[] | .name'); do hyprctl switchxkblayout $device next; done
 bind = $mod SHIFT, Space, togglefloating,
 bind = $mod, D, exec, rofi -show drun
 #bind = $mod, D, exec, wofi --width=900 --height=500 --gtk-dark -a --allow-images --show drun --prompt "Search"
