--- a/.config/hypr/modules/input.conf
+++ b/.config/hypr/modules/input.conf
@@ -3,7 +3,7 @@ input {
     kb_layout = us,cz(qwerty)
     kb_variant =
     kb_model =
-    kb_options = caps:swapescape,grp:win_space_toggle
+    kb_options = caps:swapescape
     kb_rules =
 
     follow_mouse = 1
